--- a/modules/gateway/console/src/main/java/com/l7tech/console/panels/resources/AssertionKeyAliasEditor.form
+++ b/modules/gateway/console/src/main/java/com/l7tech/console/panels/resources/AssertionKeyAliasEditor.form
@@ -47,7 +47,7 @@
           </hspacer>
         </children>
       </grid>
-      <grid id="dbac" layout-manager="GridLayoutManager" row-count="3" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+      <grid id="dbac" layout-manager="GridLayoutManager" row-count="4" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
         <margin top="0" left="0" bottom="0" right="0"/>
         <constraints>
           <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
@@ -65,7 +65,7 @@
           </component>
           <component id="b8589" class="javax.swing.JRadioButton" binding="useCustomKeyPairRadioButton" default-binding="true">
             <constraints>
-              <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+              <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
               <text value="Use custom private key"/>
@@ -74,7 +74,7 @@
           <grid id="b731" binding="customFrame" layout-manager="GridLayoutManager" row-count="2" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
             <margin top="10" left="10" bottom="10" right="10"/>
             <constraints>
-              <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+              <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties/>
             <border type="etched" title="Custom Private Key"/>
@@ -108,6 +108,14 @@
               </component>
             </children>
           </grid>
+          <component id="d8508" class="javax.swing.JRadioButton" binding="useNoPrivateKeyRadioButton" default-binding="true">
+            <constraints>
+              <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties>
+              <text value="Use no private key"/>
+            </properties>
+          </component>
         </children>
       </grid>
     </children>
@@ -116,6 +124,7 @@
     <group name="buttonGroup1">
       <member id="44573"/>
       <member id="b8589"/>
+      <member id="d8508"/>
     </group>
   </buttonGroups>
 </form>
