--- a/modules/gateway/console/src/main/java/com/l7tech/console/panels/resources/SsgConnectorPropertiesDialog.form
+++ b/modules/gateway/console/src/main/java/com/l7tech/console/panels/resources/SsgConnectorPropertiesDialog.form
@@ -702,7 +702,8 @@
                   <component id="be85d" class="com.l7tech.console.panels.ServiceComboBox" binding="serviceNameComboBox">
                     <constraints>
                       <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="3" hsize-policy="6" anchor="0" fill="3" indent="0" use-parent-layout="false">
-                        <preferred-size width="150" height="-1"/>
+                        <minimum-size width="100" height="-1"/>
+                        <preferred-size width="200" height="-1"/>
                       </grid>
                     </constraints>
                     <properties/>
