--- a/modules/gateway/assertions/RateLimitAssertion/src/main/java/com/l7tech/external/assertions/ratelimit/console/resources/RateLimitPropertiesDialog.form
+++ b/modules/gateway/assertions/RateLimitAssertion/src/main/java/com/l7tech/external/assertions/ratelimit/console/resources/RateLimitPropertiesDialog.form
@@ -3,7 +3,7 @@
   <grid id="27dc6" binding="topPanel" layout-manager="GridLayoutManager" row-count="5" column-count="3" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="6" left="6" bottom="6" right="6"/>
     <constraints>
-      <xy x="20" y="20" width="688" height="375"/>
+      <xy x="20" y="20" width="645" height="296"/>
     </constraints>
     <properties/>
     <border type="none"/>
@@ -14,7 +14,7 @@
         </constraints>
         <properties>
           <labelFor value="706ec"/>
-          <text value="Limit each:"/>
+          <text value="Limit &amp;each:"/>
         </properties>
       </component>
       <component id="c8fe9" class="javax.swing.JLabel">
@@ -57,16 +57,6 @@
           </component>
         </children>
       </grid>
-      <component id="bef9f" class="javax.swing.JTextField" binding="maxRequestsPerSecondField">
-        <constraints>
-          <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="1" indent="0" use-parent-layout="false">
-            <preferred-size width="100" height="-1"/>
-          </grid>
-        </constraints>
-        <properties>
-          <text value="100"/>
-        </properties>
-      </component>
       <component id="25c4f" class="javax.swing.JComboBox" binding="counterCb">
         <constraints>
           <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="2" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
@@ -98,7 +88,7 @@
         <properties/>
         <border type="none"/>
         <children>
-          <grid id="eaa9" layout-manager="GridLayoutManager" row-count="2" column-count="3" same-size-horizontally="false" same-size-vertically="false" hgap="0" vgap="0">
+          <grid id="eaa9" layout-manager="GridLayoutManager" row-count="3" column-count="3" same-size-horizontally="false" same-size-vertically="false" hgap="0" vgap="0">
             <margin top="0" left="0" bottom="0" right="0"/>
             <constraints>
               <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="3" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
@@ -137,12 +127,27 @@
               </component>
               <hspacer id="52ce4">
                 <constraints>
-                  <grid row="1" column="2" row-span="1" col-span="1" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+                  <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
                 </constraints>
               </hspacer>
+              <component id="d293c" class="javax.swing.JCheckBox" binding="splitConcurrencyAcrossNodes">
+                <constraints>
+                  <grid row="1" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+                </constraints>
+                <properties>
+                  <font size="9"/>
+                  <text value="Cluster w&amp;ide"/>
+                  <toolTipText value="If selected, concurrency limit will be divided by the number of cluster nodes active at the time"/>
+                </properties>
+              </component>
+              <vspacer id="cfbd2">
+                <constraints>
+                  <grid row="2" column="2" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
+                </constraints>
+              </vspacer>
             </children>
           </grid>
-          <grid id="367ad" layout-manager="GridLayoutManager" row-count="4" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="0" vgap="0">
+          <grid id="367ad" layout-manager="GridLayoutManager" row-count="5" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="0" vgap="0">
             <margin top="0" left="0" bottom="0" right="0"/>
             <constraints>
               <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
@@ -213,6 +218,11 @@
                   </component>
                 </children>
               </grid>
+              <vspacer id="2c76c">
+                <constraints>
+                  <grid row="4" column="0" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
+                </constraints>
+              </vspacer>
             </children>
           </grid>
           <hspacer id="4388a">
@@ -292,6 +302,36 @@
           </component>
         </children>
       </grid>
+      <grid id="fdafe" layout-manager="GridLayoutManager" row-count="1" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+        <margin top="0" left="0" bottom="0" right="0"/>
+        <constraints>
+          <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties/>
+        <border type="none"/>
+        <children>
+          <component id="bef9f" class="javax.swing.JTextField" binding="maxRequestsPerSecondField">
+            <constraints>
+              <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="1" indent="0" use-parent-layout="false">
+                <preferred-size width="100" height="-1"/>
+              </grid>
+            </constraints>
+            <properties>
+              <text value="100"/>
+            </properties>
+          </component>
+          <component id="341b2" class="javax.swing.JCheckBox" binding="splitRateAcrossNodes">
+            <constraints>
+              <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties>
+              <font size="9"/>
+              <text value="Cluster &amp;wide"/>
+              <toolTipText value="If selected, rate limit will be divided by the number of cluster nodes active at the time"/>
+            </properties>
+          </component>
+        </children>
+      </grid>
     </children>
   </grid>
   <buttonGroups>
@@ -302,6 +342,10 @@
     <group name="concurrentRbGroup">
       <member id="324a3"/>
       <member id="6311"/>
+    </group>
+    <group name="clusterLimitsButtonGroup">
+      <member id="1eabc"/>
+      <member id="e4516"/>
     </group>
   </buttonGroups>
 </form>
