--- a/modules/gateway/console/src/main/java/com/l7tech/console/panels/resources/ThroughputQuota.form
+++ b/modules/gateway/console/src/main/java/com/l7tech/console/panels/resources/ThroughputQuota.form
@@ -3,7 +3,7 @@
   <grid id="51a70" binding="mainPanel" layout-manager="GridLayoutManager" row-count="4" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="10" left="10" bottom="10" right="10"/>
     <constraints>
-      <xy x="16" y="0" width="720" height="493"/>
+      <xy x="16" y="0" width="545" height="454"/>
     </constraints>
     <properties>
       <preferredSize width="660" height="472"/>
@@ -73,11 +73,16 @@
                   <text value="Counter ID: "/>
                 </properties>
               </component>
-              <component id="be235" class="javax.swing.JComboBox" binding="counterNameCombo">
+              <component id="fcd8c" class="javax.swing.JTextField" binding="counterNameTextField">
                 <constraints>
-                  <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="2" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
+                  <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
+                    <preferred-size width="150" height="-1"/>
+                  </grid>
                 </constraints>
-                <properties/>
+                <properties>
+                  <editable value="true"/>
+                  <text value=""/>
+                </properties>
               </component>
             </children>
           </grid>
@@ -165,7 +170,7 @@
               </component>
             </children>
           </grid>
-          <grid id="96976" layout-manager="GridLayoutManager" row-count="2" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+          <grid id="92c6b" layout-manager="GridLayoutManager" row-count="1" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
             <margin top="0" left="0" bottom="0" right="0"/>
             <constraints>
               <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
@@ -173,22 +178,38 @@
             <properties/>
             <border type="none"/>
             <children>
-              <component id="b69cd" class="javax.swing.JRadioButton" binding="perRequestorRadio">
+              <component id="c46d" class="javax.swing.JLabel">
                 <constraints>
-                  <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+                  <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
                 </constraints>
                 <properties>
-                  <text value="Quota per requestor"/>
+                  <text value="Limit each:"/>
                 </properties>
               </component>
-              <component id="b8c26" class="javax.swing.JRadioButton" binding="globalRadio">
+              <grid id="4ca10" layout-manager="GridLayoutManager" row-count="1" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+                <margin top="0" left="0" bottom="0" right="0"/>
                 <constraints>
-                  <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+                  <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
                 </constraints>
-                <properties>
-                  <text value="Global quota"/>
-                </properties>
-              </component>
+                <properties/>
+                <border type="none"/>
+                <children>
+                  <hspacer id="f7638">
+                    <constraints>
+                      <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+                    </constraints>
+                  </hspacer>
+                  <component id="902a0" class="javax.swing.JComboBox" binding="quotaOptionsComboBox">
+                    <constraints>
+                      <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="2" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
+                    </constraints>
+                    <properties>
+                      <editable value="false"/>
+                      <model/>
+                    </properties>
+                  </component>
+                </children>
+              </grid>
             </children>
           </grid>
         </children>
